--- a/index.html
+++ b/index.html
@@ -1,6 +1,18 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Wed Oct 09 2024 18:15:01 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="66478660af065151dfd3455d" data-wf-site="66478660af065151dfd3449c">
 <head>
+  <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+<script>
+  if (window.netlifyIdentity) {
+    window.netlifyIdentity.on("init", user => {
+      if (!user) {
+        window.netlifyIdentity.on("login", () => {
+          document.location.href = "/admin/";
+        });
+      }
+    });
+  }
+</script>
   <meta charset="utf-8">
   <title>Benjamin&#x27;s Exceptional Site</title>
   <meta content="width=device-width, initial-scale=1" name="viewport">
