--- a/index.html
+++ b/index.html
@@ -1,5 +1,18 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Tue Oct 15 2024 12:03:01 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="670988b19c34f243d2b87099" data-wf-site="66478660af065151dfd3449c">
+  <head>
+  <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+<script>
+  if (window.netlifyIdentity) {
+    window.netlifyIdentity.on("init", user => {
+      if (!user) {
+        window.netlifyIdentity.on("login", () => {
+          document.location.href = "/admin/";
+        });
+      }
+    });
+  }
+    </head>
 <head>
   <meta charset="utf-8">
   <title>landingpage</title>
